# dual_relay

./: Cargo.toml  test_rust.rs
.github/workflows/: CI.yml
FastDDS_interop_test/: .gitattributes  CMakeLists.txt  Frag_test.cpp  NetboxMessage.cxx  NetboxMessage.h  NetboxMessage.idl  NetboxMessageCdrAux.hpp  NetboxMessageCdrAux.ipp  NetboxMessageL.cxx  NetboxMessageL.h  NetboxMessageL.idl  NetboxMessageLCdrAux.hpp  NetboxMessageLCdrAux.ipp  NetboxMessageLPubSubTypes.cxx  NetboxMessageLPubSubTypes.h  NetboxMessagePubSubTypes.cxx  NetboxMessagePubSubTypes.h  ShapePublisher.cpp  ShapePublisher.hpp  ShapePublisher2.cpp  ShapePublisher3.cpp  ShapePublisher7.cpp  ShapeSubscriber.hpp  ShapeSubscriber3.cpp  UInt8Type.cxx  UInt8Type.h  UInt8Type.idl  UInt8TypeCdrAux.hpp  UInt8TypeCdrAux.ipp  UInt8TypePubSubTypes.cxx  UInt8TypePubSubTypes.h  brahm.cpp  bridge.cpp  bridge.h  coales_test2.cpp  coales_test3.cpp  config.json  globals.hpp  multicaste_test.cpp  print_qos.cpp  (+4 more)
FastDDS_interop_test/Relay_DDS/: CMakeLists.txt  ShapePublisher.cpp  config3.json  config_sniffer.cpp  config_sniffer_relay.json  globals.hpp  multiple_writer.cpp
FastDDS_interop_test/Relay_DDS/MessageSerialisers/: NetboxMessage1.h  NetboxMessage1CdrAux.ipp  NetboxMessage2.h  NetboxMessage2PubSubTypes.cxx  NetboxMessage2PubSubTypes.h
FastDDS_interop_test/Relay_DDS/include/: ShapeSubscriber.hpp  globals.cpp  globals.hpp  shapepublisher2.hpp
FastDDS_interop_test/Relay_DDS/src/: config_sniffer.cpp  globals.cpp
FastDDS_interop_test/swamtype/: CMakeLists.txt  Combpublisher.cpp  Frag_test.cpp  NetboxMessage1.cxx  NetboxMessage1.idl  NetboxMessage1PubSubTypes.cxx  NetboxMessage1PubSubTypes.h  NetboxMessage2.idl  NetboxMessage2CdrAux.hpp  Queue_FastDDS_relay.cpp  Queue_FastDDS_relay2.cpp  ShapePublisher2.cpp  ShapePublisher4.cpp  ShapePublisher5.cpp  ShapePublisher6.cpp  ShapeSubscriber.cpp  SwampGCSType.cxx  SwampGCSType.h  SwampGCSTypeCdrAux.hpp  SwampGCSTypeCdrAux.ipp  SwampGCSTypePubSubTypes.cxx  SwampGCSTypePubSubTypes.h  both_direction_relay.cpp  coales3.cpp  coales_test.cpp  config_pubsub_relay.json  config_sniffer_relay.json  deque_writer.cpp  deque_writer_second_aproach2.cpp  fastdds_config_relay.cpp  fastdds_config_relay2.cpp  fastdds_pub.cpp  hard_solution.cpp  main.cpp  multiple_writer.cpp  newmessage.cxx  newmessage.h  newmessage.idl  newmessageCdrAux.hpp  newmessageCdrAux.ipp  (+24 more)
Relay_DDS/: CMakeLists.txt  Frag_test.cpp  ShapePublisher.hpp  config_pubsub_relay.json  config_sniffer.cpp  config_sniffer_relay.json  globals.hpp  multiple_writer.cpp  topic_dds_relay.cpp
Relay_DDS/MessageSerialisers/: NetboxMessage1CdrAux.hpp  NetboxMessage2.cxx  NetboxMessage2CdrAux.ipp
examples/shapes_demo/: main.rs
examples/shapes_demo_mio_08/: main.rs
interop_newtest/: UInt8Type.cxx  UInt8Type.h  UInt8Type.idl  UInt8TypePubSubTypes.cxx  UInt8TypePubSubTypes.h
participant/: CMakeLists.txt
participant/src/: subscriber.cpp
